setup/azure/wallarm/netpols/common/default-deny-all-network-policy.yaml
# -------------------------------------------------------------------------
#
# Copyright (c) 2023, WSO2 LLC. (http://www.wso2.com). All Rights Reserved.
#
# This software is the property of WSO2 LLC. and its suppliers, if any.
# Dissemination of any information or reproduction of any material
# contained herein in any form is strictly forbidden, unless permitted by
# WSO2 expressly. You may not alter or remove any copyright or other notice
# from copies of this content.
#
# --------------------------------------------------------------------------

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all-network-policy
  namespace: wallarm-ingress
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
