setup/azure/wallarm/netpols/common/wallarm-controller-network-policy.yaml
# -------------------------------------------------------------------------
#
# Copyright (c) 2023, WSO2 LLC. (http://www.wso2.com). All Rights Reserved.
#
# This software is the property of WSO2 LLC. and its suppliers, if any.
# Dissemination of any information or reproduction of any material
# contained herein in any form is strictly forbidden, unless permitted by
# WSO2 expressly. You may not alter or remove any copyright or other notice
# from copies of this content.
#
# --------------------------------------------------------------------------

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: wallarm-controller-network-policy
  namespace: wallarm-ingress
spec:
  egress:
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 169.254.169.254/32
  ingress:
    - ports:
        - port: 8443
          protocol: TCP
        - port: 80
          protocol: TCP
        - port: 443
          protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/component: controller
      app.kubernetes.io/instance: wallarm-ingress
      app.kubernetes.io/name: wallarm-ingress
  policyTypes:
    - Ingress
    - Egress
